fix alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,8 +9,6 @@ body {
   padding: 0px;
   margin: 0px;
   display: flex;
-  height: 100vw;
-  width: 100vh;
   background-color: #6f76d8;
 }
 
